samples/_failures_safe/1761165421_31b574_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_267c55e4.c: In function ‘main’:
./samples/SAFE/__tmp_267c55e4.c:189:20: error: expected ‘:’ at end of input
  189 |             default
      |                    ^
      |                    :
./samples/SAFE/__tmp_267c55e4.c:189:13: error: expected declaration or statement at end of input
  189 |             default
      |             ^~~~~~~
./samples/SAFE/__tmp_267c55e4.c:189:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_267c55e4.c:189:13: error: expected declaration or statement at end of input
